fix alignment in modal

--- a/assets/style.css
+++ b/assets/style.css
@@ -1184,7 +1184,7 @@ html {
 }
 
 .left {
-  padding: 0 3rem;
+  padding: 3rem 3rem 0;
   width: 40%;
   display: flex;
   flex-direction: column;
@@ -1212,6 +1212,7 @@ html {
 .theno {
   display: flex;
   justify-content: space-evenly;
+  padding: 1.5rem 0;
 }
 
 .obligation,
